WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282414
Fix the open source macOS 15.1-and-above build after
284018@main
https://bugs.webkit.org/show_bug.cgi?id=282414
Summary
Fix the open source macOS 15.1-and-above build after 284018@main
Abrar Rahman Protyasha
Reported
2024-10-31 15:07:50 PDT
Build error, reported by maraisr: ``` Source/WebKit/UIProcess/WebAuthentication/Mock/MockNfcService.mm:251:70: error: instance method '-initWithUIType:' not found (return type defaults to 'id') [-Werror,-Wobjc-method-access] 251 | auto readerSession = adoptNS([allocNFReaderSessionInstance() initWithUIType:NFReaderSessionUINone]); | ^~~~~~~~~~~~~~ Source/WebKit/UIProcess/WebAuthentication/Mock/MockNfcService.mm:251:85: error: use of undeclared identifier 'NFReaderSessionUINone' 251 | auto readerSession = adoptNS([allocNFReaderSessionInstance() initWithUIType:NFReaderSessionUINone]); | ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-31 15:08:02 PDT
<
rdar://problem/139032978
>
Abrar Rahman Protyasha
Comment 2
2024-10-31 15:13:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/36024
EWS
Comment 3
2024-10-31 19:23:11 PDT
Committed
285991@main
(62a6f504bf7e): <
https://commits.webkit.org/285991@main
> Reviewed commits have been landed. Closing PR #36024 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug